--- a/style.css
+++ b/style.css
@@ -26,7 +26,7 @@ nav ul {
     padding-top: 10px;
     justify-content: center;
     flex-direction: colomn;
-    height: 80px;
+    height: 50px;
     padding-top: 20px;
     padding-bottom: 20px;
     list-style: none;
@@ -36,14 +36,9 @@ nav ul {
 nav ul li h2 {
     color: white;
     font-size: 2em;
-    text-decoration: none;
 
 
-}
 
-nav ul li h2 a:link {
-    color: black;
-    border-bottom: 1px solid white;
 }
 
 nav ul li {
@@ -97,51 +92,65 @@ header>div ul li a {
 }
 
 
-/**.heart {
-    align-self: start;
-}**/
+
+#space {
+    display: flex;
+    flex-direction: colomn;
+    justify-content: center;
+    cursor: pointer;
+
+}
+
 #search-box {
-    width: 400%;
-    padding-bottom: 14px;
-    padding-top: 14px;
+    width: 350px;
+    height: 50px;
+    padding-left: 400px;
+    margin-top: 21px;
+    margin-bottom: 20px;
+
     background: rgba(240, 245, 247, 0.925);
     color: black;
     font-weight: bold;
     border: none;
-
 }
 
 #search-button {
+    height: 50px;
     width: 230%;
     padding-bottom: 14px;
     padding-top: 14px;
+
     background: black;
     color: white;
     font-weight: bolder;
 }
 
-.header3 ul {
-    display: flex;
-    flex-flow: row;
-    justify-content: space-between;
-    align-items: center;
-    list-style: none;
-    margin-left: 10px;
+#sign-button {
+    height: 50px;
+    width: 70%;
+    padding-bottom: 14px;
+    padding-top: 14px;
+    margin-left: 100px;
+    color: black;
+    font-weight: 500;
+    font-size: 1em;
+}
+
+#sign-in {
+    height: 50px;
+    width: 70%;
+    padding-bottom: 14px;
+    padding-top: 14px;
+    margin-left: 100px;
+    color: black;
+    font-weight: 500;
+    font-size: 1em;
+    cursor: pointer;
+}
+
+#one {
+    margin-top: 25px;
     margin-right: 10px;
-    /**padding-top: 20px;
-    padding-bottom: 40px;
-    margin-right: 30px;
-    margin-left: 30px;**/
-}
-
-.header3 ul {
-    font-weight: bold;
-    font-size: 1.6em;
-}
-
-.sbox {
-    display: flex;
-    flex-direction: row;
 
 }
 
@@ -154,10 +163,6 @@ header>div ul li a {
     background-image: url(/IMAGE/background2.png);
     padding-bottom: 50px;
 }
-
-/**.bg2 div {
-    text-align: center;
-}**/
 
 .bg2 div {
     text-align: center;
@@ -193,16 +198,6 @@ header>div ul li a {
     padding-top: 30px;
 }
 
-/**.bg2 div h4 {
-    color: white;
-    font-size: 1.6em;
-    font-weight: 400;
-    padding-bottom: 40px;
-    padding-top: 10px;
-    padding-left: 70px;
-    padding-right: 70px;
-}
-**/
 .input {
     width: 200px;
     justify-content: space-around;
@@ -299,29 +294,20 @@ input {
 }
 
 
-
-
-/**#home2 article img,
-
-p {
-    padding-left: 50px;
-    padding-right: 50px;
-    padding-top: 20px;
-
-}**/
-
 .in {
 
-    height: 40px;
-    width: 180px;
-    border-style: solid;
+
+
     border-color: black;
-    border-width: 1px;
+
+    border-radius: 20px;
+    height: 40px;
+
     cursor: pointer;
-    border-radius: 10%;
+
     background: white;
     font-size: 1.1em;
-    font-weight: 700;
+    font-weight: bolder;
     margin-top: 30px;
 }
 
@@ -394,6 +380,7 @@ p {
     list-style: none;
     font-size: 1.8em;
     font-weight: 400;
+    color: white;
     padding-bottom: 15px;
 }
 
@@ -401,6 +388,10 @@ p {
 #foot {
     margin-bottom: 10px;
 
+}
+
+#foot div article ul li a {
+    color: black;
 }
 
 .remove-underline {
